# testsweet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
claude/plans/: 2026-04-26_catches.md  2026-04-26_discover.md  2026-04-26_runner.md  2026-04-26_targets.md  2026-04-26_test-decorator.md  2026-04-26_test_class.md  2026-04-26_test_params.md  2026-04-27_directory_walk.md  2026-04-27_discover_targets.md  2026-04-27_discovery_config.md  2026-04-27_drop-test-class.md  2026-04-27_idiom_cleanup.md  2026-04-27_resolve_units.md  2026-04-27_split_targets.md
claude/specs/: 2026-04-26_catches.md  2026-04-26_directory_walk.md  2026-04-26_discover.md  2026-04-26_runner.md  2026-04-26_targets.md  2026-04-26_test-decorator.md  2026-04-26_test_class.md  2026-04-26_test_params.md  2026-04-27_discover_targets.md  2026-04-27_discovery_config.md  2026-04-27_idiom_cleanup.md  2026-04-27_resolve_units.md  2026-04-27_split_targets.md  2026-04-27_unittest-to-testsweet-migration.md
claude/transcripts/: cleanup.md
doc/examples/: catches.py  classes.py  functions.py
doc/roadmap/examples/: django.py
docs/: contributing.md  getting-started.md  reference.md
examples/: catches.py
src/assertions/: __init__.py  __main__.py  _catches.py  _classify.py  _config.py  _discover.py  _loaders.py  _markers.py  _params.py  _resolve.py  _runner.py  _targets.py  _test_class.py  _walk.py
src/testsweet/: __init__.py  __main__.py  _assertion.py  _catches.py  _class_helpers.py  _config.py  _discover.py  _loaders.py  _markers.py  _params.py  _resolve.py  _runner.py  _targets.py  _walk.py
tests/: catches.py  cli.py  targets.py  test_catches.py  test_class_helpers.py  test_cli.py  test_config.py  test_discover.py  test_loaders.py  test_markers.py  test_params.py  test_resolve.py  test_runner.py  test_targets.py  test_test_class.py  test_unittest_shim.py  test_walk.py
tests/fixtures/: empty.py  imported_only.py  mixed.py  mixed_local_imported.py  multiple.py  non_callable_marker.py  single.py
tests/fixtures/runner/: all_pass.py  assertion_diagnostics.py  class_calls_recorded.py  class_decorated_simple.py  class_decorated_with_cm.py  class_enter_only.py  class_enter_raises.py  class_exit_raises.py  class_method_fails.py  class_mixed_with_function.py  class_simple.py  class_with_inheritance.py  class_with_underscore_methods.py  has_broken_import.py  has_failure.py  keyboard_interrupt.py  non_assertion_error.py  params_empty.py  params_generator.py  params_lazy_generator.py  params_lazy_list.py  params_lazy_on_class_method.py  params_no_decoration.py  params_on_class_method.py  params_simple.py  params_with_failure.py
