[project]
name = "testsweet"
version = "0.1.0"
description = "Python testing for humans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testsweet"]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"

[tool.testsweet.discovery]
include_paths = ["tests"]
exclude_paths = ["tests/fixtures"]
