[project]
name = "testsweet"
version = "0.1.2"
description = "Python testing for humans"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/kaapstorm/testsweet"
Source = "https://github.com/kaapstorm/testsweet"
Documentation = "https://github.com/kaapstorm/testsweet/blob/main/README.md"
Changelog = "https://github.com/kaapstorm/testsweet/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testsweet"]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"

[tool.testsweet.discovery]
include_paths = ["tests"]
exclude_paths = ["tests/fixtures"]
