[project]
name = "testsweet"
version = "0.1.4"
description = "Python testing for humans"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
testsweet = "testsweet.__main__:cli"

[project.urls]
Homepage = "https://github.com/kaapstorm/testsweet"
Source = "https://github.com/kaapstorm/testsweet"
Documentation = "https://github.com/kaapstorm/testsweet/blob/main/README.md"
Changelog = "https://github.com/kaapstorm/testsweet/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testsweet"]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "src"
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.testsweet.discovery]
include_paths = ["tests"]
exclude_paths = ["tests/fixtures"]
